# drone

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  README.md
cmake/: AddExternalLibs.cmake  AddGitSubmodule.cmake  CPM.cmake  ConfigSafeGuards.cmake  GitAddSubmodules.cmake  GitFetchRepos.cmake
data/: Last_Filter_Settings.json
doc/: ClassDiagramm.drawio
docs/: ClassDiagram_UAV.drawio  Doxyfile  Notes_to_Consider.md
ground_station/: Cargo.toml
ground_station/src/: main.rs
shared/src/: lib.rs
src/: CMakeLists.txt  Point.rs  components.rs  main.rs
src/Sensor/: mod.rs  sensor.rs
src/coordinates/: point.rs
src/data_types/: CMakeLists.txt
src/data_types/include/data_types/: GPS_Coordinates.hpp  file_enums.hpp
src/file_handler/: CMakeLists.txt  File_Handler.cpp
src/file_handler/Read_Files/: CMakeLists.txt  Read_Files.cpp
src/file_handler/Read_Files/include/Read_Files/: Read_Files.hpp
src/file_handler/Write_Files/: CMakeLists.txt  Write_Files.cpp
src/file_handler/Write_Files/include/Write_Files/: Write_Files.hpp
src/file_handler/include/file_handler/: file_handler.hpp
src/file_reader/: CMakeLists.txt
src/file_writer/: CMakeLists.txt  File_Writer.cpp
src/filter/: CMakeLists.txt
src/filter/FilterTemplate/: CMakeLists.txt
src/filter/FilterTemplate/include/FilterTemplate/: IFilterTemplate.hpp
src/filter/PID-Filter/: CMakeLists.txt  PID_Filter.cpp
src/filter/PID-Filter/include/PID_Filter/: PID_Filter.hpp
src/ground_station/: CMakeLists.txt
src/ground_station/Convert_Inputs/: CMakeLists.txt
src/ground_station/Services/: CMakeLists.txt
src/ground_station/UI/: CMakeLists.txt
src/logics/: flight_logic.rs  mod.rs
src/motor_driver/: engines.rs
src/sensor/: sensor.rs
src/shared/: CMakeLists.txt
src/shared/Coordinates/: CMakeLists.txt
src/shared/communication/: CMakeLists.txt
src/shared/communication/commHandler/: CMakeLists.txt
src/shared/communication/receiver/: CMakeLists.txt
src/shared/enum/: CMakeLists.txt
src/uav/: CMakeLists.txt
src/uav/Controller/: CMakeLists.txt
src/uav/Controller/abstractController/: CMakeLists.txt
src/uav/Controller/pidController/: CMakeLists.txt
src/uav/Controls/: CMakeLists.txt
src/uav/Engine/: CMakeLists.txt
src/uav/Engine/abstractEngine/: CMakeLists.txt
src/uav/Engine/abstractEngine/include/abstractEngine/: AabstractEngine.hpp
src/uav/Engine/engine/: CMakeLists.txt
src/uav/Engine/engineFactory/: CMakeLists.txt
src/uav/Engine/engineHandler/: CMakeLists.txt
src/uav/Filtering/: CMakeLists.txt
src/uav/Filtering/abstractFilter/: CMakeLists.txt
src/uav/Filtering/ekf/: CMakeLists.txt
src/uav/Filtering/filterfactory/: CMakeLists.txt
src/uav/Filtering/kalmann_filter/: CMakeLists.txt
src/uav/Filtering/lpf/: CMakeLists.txt
src/uav/Sensor/: CMakeLists.txt
tests/: CMakeLists.txt
tests/data_types/: data_types.cpp
tests/filter/: pid_controller.cpp
uav_brain/: Cargo.toml  components.rs
uav_brain/motor_driver/: engines.rs
uav_brain/src/: components.rs  main.rs
uav_brain/src/logics/: flight_logic.rs
uav_brain/src/motor_driver/: engines.rs
uav_brain/src/sensor_builder/: sensor.rs
